--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "metalsmith": "^2.1.0"
+    "metalsmith": "^2.1.0",
+    "metalsmith-markdown": "^0.2.1"
   }
 }
