--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ Temporary Items
 #Dependencies
 ./bower_components
 ./node_modules
+/bower_components
+/node_modules
+bower_components
+node_modules
