--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "devDependencies": {
     "handlebars": "^4.0.5",
     "metalsmith": "^2.1.0",
+    "metalsmith-drafts": "0.0.1",
+    "metalsmith-layouts": "^1.6.5",
     "metalsmith-markdown": "^0.2.1",
+    "metalsmith-permalinks": "^0.5.0",
     "metalsmith-templates": "^0.7.0"
   }
 }
