--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "metalsmith-layouts": "^1.6.5",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
+    "metalsmith-sass": "^1.3.0",
     "metalsmith-templates": "^0.7.0"
   }
 }
