--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-sass": "^1.3.0",
+    "metalsmith-start": "^2.0.1",
     "metalsmith-templates": "^0.7.0"
   }
 }
