Pre-Release Cleanup #1 - Added clearer instructions to the readme file - Added media queries to css files - Removed Build folder, added it to gitignore - Cleaned up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -47,9 +47,6 @@ Temporary Items
 .apdisk
 
 #Dependencies
-./bower_components
-./node_modules
 /bower_components
 /node_modules
-bower_components
-node_modules
+/build
